objects/Sprint_Master_Task__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_from_Start__c</fullName>
        <label>Days from Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Days_From_Start__c</fullName>
        <label>Due Days From Start</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Name__c</fullName>
        <formula>Sprint_Master__r.Sprint_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Master__c</fullName>
        <label>Sprint Master</label>
        <referenceTo>Sprint_Master__c</referenceTo>
        <relationshipLabel>Sprint Master Tasks</relationshipLabel>
        <relationshipName>Sprint_Master_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Subject__c</fullName>
        <label>Text Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sprint Master Task</label>
    <nameField>
        <displayFormat>STSK-{00000000}</displayFormat>
        <label>Sprint Master Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Master Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>